syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

package users.v1;
option go_package = "voidspace/users/proto/users/v1;usersv1";

service UserService {
  rpc GetCurrentUser(google.protobuf.Empty) returns (GetUserResponse);
  rpc GetUser(GetUserRequest) returns (GetUserResponse);
  rpc UpdateProfile(UpdateProfileRequest) returns (UserServiceResponse);
  rpc DeleteUser(google.protobuf.Empty) returns (UserServiceResponse);
  rpc Follow(FollowRequest) returns (UserServiceResponse);
  rpc Unfollow(FollowRequest) returns (UserServiceResponse);
}

message GetUserRequest {
  string username = 1;
}

message UpdateProfileRequest {
  optional string display_name = 1;
  optional string bio = 2;
  optional string avatar_url = 3;
  optional string banner_url = 4;
  optional string location = 5;
}

message FollowRequest {
  string username = 1;
}

// Response messages
message GetUserResponse {
  string message = 1;
  User user = 2; 
}

message UserServiceResponse {
  string message = 1;
}

message User {
  optional int32 id = 1;
  string username = 2;  
  Profile profile = 3;
  google.protobuf.Timestamp created_at = 4;
}

message Profile {
  string display_name = 1;
  string bio = 2;
  string avatar_url = 3;
  string banner_url = 4;
  string location = 5;
  int32 followers = 6;  
  int32 following = 7;
}